testsuite/tests/rename/should_compile/T4489.hs
{-# OPTIONS_GHC -fwarn-missing-import-lists #-}
module T4489 where

import Data.Maybe
import Data.Maybe( Maybe(..) )
import Data.Maybe( Maybe(Just) )
