testsuite/tests/rename/should_fail/T10668.hs
{-# LANGUAGE GHC2021 #-}
module T10668 where

import Data.Type.Equality(Refl)
